# ViceAndroid

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: playstore.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vice_android_bridge.cpp
app/src/main/java/com/viceandroid/c64/: BezelDownloader.java  C64Native.java  C64Runtime.java  DpadView.java  IgdbService.java  MainActivity.java  SetupWizardActivity.java  StoragePathUtils.java  ViceMenuPanel.java  ViceNative.java  ViceRuntime.java
app/src/main/res/values/: strings.xml  styles.xml
tools/: build-vice-android-headless.sh  update-vice.sh
